Fix Duplicate Markup Sets, May need to change the way this is working at some point, but we'll see. Start to work on implementing horizontal scrolling for markups  and rules (much harder than I thought, thanks CSS)

--- a/static/css/projectstyling.css
+++ b/static/css/projectstyling.css
@@ -5,10 +5,6 @@
 }
 
 .btn-test {
-    margin-right: -1000vw;
+    overflow-y: visible;
 }
 
-.muwrap {
-    width: 100%;
-    overflow: auto;
-}
